[gd_scene load_steps=3 format=3 uid="uid://cllj6qbg7n5l"]

[ext_resource type="Script" uid="uid://n8g06737dxj7" path="res://Scripts/main_menu.gd" id="1_opfnp"]
[ext_resource type="Texture2D" uid="uid://bjawshfu0jbd3" path="res://Assets/backgrounds/base_background-export-2.png" id="2_48xlc"]

[node name="MainMenu" type="Node2D"]
script = ExtResource("1_opfnp")

[node name="Background" type="Sprite2D" parent="."]
position = Vector2(400, 300)
scale = Vector2(2.94118, 3.75)
texture = ExtResource("2_48xlc")

[node name="Main_menu_UI" type="Control" parent="."]
layout_mode = 3
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 125.0
offset_top = 19.0
offset_right = 989.0
offset_bottom = 955.0
grow_horizontal = 2
scale = Vector2(0.607641, 0.607641)

[node name="Title" type="Label" parent="Main_menu_UI"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -146.0
offset_top = 51.0
offset_right = 198.0
offset_bottom = 154.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 75
text = "Star Gaze"

[node name="Main_Menu_Buttons" type="VBoxContainer" parent="Main_menu_UI"]
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -71.0
offset_top = 353.0
offset_right = 71.0
offset_bottom = -154.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(1.35848, 1.35848)

[node name="Play" type="Button" parent="Main_menu_UI/Main_Menu_Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Play"

[node name="Options" type="Button" parent="Main_menu_UI/Main_Menu_Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Options
"

[node name="About" type="Button" parent="Main_menu_UI/Main_Menu_Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "About"

[node name="Exit" type="Button" parent="Main_menu_UI/Main_Menu_Buttons"]
layout_mode = 2
theme_override_font_sizes/font_size = 35
text = "Exit"

[node name="Options_Menu" type="ColorRect" parent="Main_menu_UI"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 864.0
offset_bottom = 936.0
color = Color(0, 0, 0, 0.635294)

[node name="Options_Exit" type="Button" parent="Main_menu_UI/Options_Menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -49.0
offset_bottom = 57.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 35
text = "X"

[node name="About_Menu" type="ColorRect" parent="Main_menu_UI"]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 864.0
offset_bottom = 936.0
color = Color(0, 0, 0, 0.635294)

[node name="About_Exit" type="Button" parent="Main_menu_UI/About_Menu"]
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -49.0
offset_bottom = 57.0
grow_horizontal = 0
theme_override_font_sizes/font_size = 35
text = "X"

[connection signal="pressed" from="Main_menu_UI/Main_Menu_Buttons/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Main_menu_UI/Main_Menu_Buttons/Options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="Main_menu_UI/Main_Menu_Buttons/About" to="." method="_on_about_pressed"]
[connection signal="pressed" from="Main_menu_UI/Main_Menu_Buttons/Exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Main_menu_UI/Options_Menu/Options_Exit" to="." method="_on_options_exit_pressed"]
[connection signal="pressed" from="Main_menu_UI/About_Menu/About_Exit" to="." method="_on_about_exit_pressed"]
